--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <button mat-button [routerLink]="['']">Angusales</button>
   <span class="company"></span>
   <button mat-button [routerLink]="['customers']">Customers</button>
-  <button mat-button>Company</button>
+  <button mat-button [routerLink]="['companies']">Companies</button>
 </mat-toolbar>
 <!-- <app-table></app-table> -->
 
