--- a/src/app/new-customer/new-customer.component.html
+++ b/src/app/new-customer/new-customer.component.html
@@ -10,7 +10,7 @@
     <br>
   
     <mat-form-field>
-        <textarea matInput placeholder="Company" [(ngModel)]="company"></textarea>
+        <textarea matInput placeholder="Company ID" [(ngModel)]="company"></textarea>
     </mat-form-field>
     <br>
 
@@ -24,5 +24,5 @@
     </mat-form-field>
 
 <br>
-    <button mat-button (click) = "submitCustomer()">Submit Customer Information</button>
+    <button mat-button (click) = "submitCustomer()" [routerLink]="['/customers']">Submit Customer Information</button>
   </div>
